commented //{ text: "PSYPSYPSY", font: "'Gochi Hand', cursive", weight: "400", size: "clamp(3.2rem, 14vw, 6rem)" },

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             // Array of text objects, including the text itself and its specific font styles
             // Increased so the morphing text is noticeably larger
             const texts = [
-                { text: "PSYPSYPSY", font: "'Gochi Hand', cursive", weight: "400", size: "clamp(3.2rem, 14vw, 6rem)" },
+                //{ text: "PSYPSYPSY", font: "'Gochi Hand', cursive", weight: "400", size: "clamp(3.2rem, 14vw, 6rem)" },
                 { text: "It's a Vice.", font: "'Poppins', sans-serif", weight: "700", size: "clamp(2.4rem, 9vw, 4.6rem)" },
                 { text: "MADE IN INDIA", font: "'Poppins', sans-serif", weight: "700", size: "clamp(2rem, 8vw, 4rem)" },
                 { text: "Coming Soon", font: "'Poppins', sans-serif", weight: "700", size: "clamp(2rem, 8vw, 4rem)" },
