--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FAVICON ADDED HERE -->
-    <link rel="icon" type="image/svg+xml" href="images/psylogo.svg">
+    <link rel="icon" type="image/png" href="images/psy_logo.png">
     <title>PSYPƧYPSY - Coming Soon</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
