Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       NEW: Social media links container.
       This is placed outside the main text container.
     --><div id="social-links">
-        <a href="https://www.instagram.com/psypyspsy_r1/" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.instagram.com/psypsypsy.in/" target="_blank" rel="noopener noreferrer">
             <img class="social-icon" src="images/insta_transparent_icon.png" alt="Instagram"> Instagram
         </a>
         <a href="https://www.reddit.com/r/psypsypsy/" target="_blank" rel="noopener noreferrer">
